# Chess-Proj

./: Bishop.cpp  CMakeLists.txt  ChessApp.cpp  ChessApp.h  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  ChessView.cpp  King.cpp  Knight.cpp  Knight.h  Mainframe.h  Pawn.cpp  Queen.cpp  README.md  Rook.cpp  Rook.h  ids.h  main.cpp  pch.h
ChessLib/: Bishop.h  CMakeLists.txt  ChessGame.cpp  ChessPiece.cpp  ChessView.cpp  King.cpp  King.h  Knight.cpp  Mainframe.cpp  Pawn.cpp  Pawn.h  Queen.h  Rook.cpp  pch.h
